Make Meridth, LLC logo responsive based on width of screen

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,13 @@
 .g-recaptcha div {
   margin: auto;
 }
+
+.logo {
+  content:url("/img/white_logo.png")
+}
+
+@media (max-width: 767px) {
+  .logo {
+    content:url("/img/white_logo_small.png")
+  }
+}
