--- a/views/layout.erb
+++ b/views/layout.erb
@@ -47,8 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/white_logo.png" /></a> 
-                <!-- <a class="navbar-brand page-scroll" href="#page-top">Meridth, LLC</a> -->
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="logo"></a> 
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
