Fix linkedin link

--- a/views/index.erb
+++ b/views/index.erb
@@ -148,7 +148,7 @@
                         </li>
                         <li><a href="https://twitter.com/jmeridth"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="https://linkedin.com/in/jasonmeridth"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://linkedin.com/in/jmeridth"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
