--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,22 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Meridth.io <%= Time.now.year %></span>
+              <span class="copyright">Copyright &copy; Meridth.io {{ current_year }}</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="https://twitter.com/meridthllc" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="https://github.com/meridthllc" target="_blank"><i class="fa fa-github"></i></a>
-                    </li>
+                    <li><a href="https://twitter.com/meridthllc" target="_blank"><i class="fa fa-twitter" /></i></a></li>
+                    <li><a href="https://github.com/meridthllc" target="_blank"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
-                    </li>
-                    <li><a href="#">Terms of Use</a>
-                    </li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Use</a></li>
                 </ul>
             </div>
         </div>
