--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{% extends "layout.html" %}
+{% block body %}
 <!-- Header -->
 <header>
     <div class="container">
@@ -61,7 +63,7 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/about/2.jpg') }}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -75,7 +77,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/about/1.jpg') }}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -89,7 +91,7 @@
                     </li>
                     <li>
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/about/3.jpg') }}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -103,7 +105,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/about/4.jpg') }}" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -117,9 +119,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Contact
-                                <br>Us For
-                                <br>More Info!</h4>
+                            <h4>Contact<br/>Us For<br/>More Info</h4>
                         </div>
                     </li>
                 </ul>
@@ -140,7 +140,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="team-member">
-                    <img src="img/team/jason.png" class="img-responsive img-circle" alt="">
+                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/jason.png') }}" alt="">
                     <h4>Jason Meridth</h4>
                     <p class="text-muted">Founder/Developer</p>
                     <ul class="list-inline social-buttons">
@@ -210,3 +210,4 @@
         </div>
     </div>
 </section>
+{% endblock %}
