--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,14 +12,14 @@
     <title>Meridth, LLC</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
 
     <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/agency.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/custom.css')}}">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='font-awesome/css/font-awesome.min.css')}}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -75,26 +75,26 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <%= yield %>
+    {% block body %}{% endblock %}
 
-    <%= erb :footer %>
+    {% extends "footer.html" %}
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="{{url_for('static',filename='js/jquery.js')}}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
+    <script src="{{url_for('static',filename='js/classie.js')}}"></script>
+    <script src="{{url_for('static',filename='js/cbpAnimatedHeader.js')}}"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="{{url_for('static',filename='js/jqBootstrapValidation.js')}}"></script>
+    <script src="{{url_for('static',filename='js/contact_me.js')}}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
+    <script src="{{url_for('static',filename='js/agency.js')}}"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
 
 </body>
