Stabalize javascript and footer
- still need to wire-up contact form before deploying to prod

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -76,8 +76,8 @@
     </nav>
 
     {% block body %}{% endblock %}
+    {% include 'footer.html' %}
 
-    {% extends "footer.html" %}
     <!-- jQuery -->
     <script src="{{url_for('static',filename='js/jquery.js')}}"></script>
 
