--- a/templates/error.html
+++ b/templates/error.html
@@ -1,3 +1,5 @@
+{% extends 'layout.html' %}
+{% block error %}
 <div class="container">
   <div class="hero-unit">
     <h4> Page doesn't exist or error occurred. </h4>
@@ -7,3 +9,4 @@
   </div>
   <hr/>
 </div>
+{% endblock %}
