--- a/templates/layout.html
+++ b/templates/layout.html
@@ -76,6 +76,7 @@
     </nav>
 
     {% block body %}{% endblock %}
+    {% block error %}{% endblock %}
     {% include 'footer.html' %}
 
     <!-- jQuery -->
