--- a/templates/index.html
+++ b/templates/index.html
@@ -173,7 +173,8 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" novalidate>
+                    <!-- <form name="sentMessage" id="contactForm" novalidate> -->
+                    <form method="post" action"/contact">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -198,7 +199,7 @@
                         <div class="clearfix"></div>
                         <div class="col-lg-12">
                           <div id="success"></div>
-                          <div class="g-recaptcha" data-theme="dark" data-sitekey="{{ recaptcha_sitekey }}"></div>
+                          <script src='//www.google.com/recaptcha/api.js'></script> <div class="g-recaptcha" data-sitekey="6LegaiITAAAAACT9uU82EHWNPbDdG7Pctd7UAt6e" data-theme="light" data-type="image" data-size="normal" data-tabindex="0"></div>
                         </div>
                         <div class="clearfix">&nbsp;</div>
                         <div class="col-lg-12 text-center">
