Change contact link to mailto

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="mailto:contact@meridth.io">Contact</a>
                     </li>
                 </ul>
             </div>
