--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,8 @@
 
     <title>Meridth, LLC</title>
 
+    <link rel="shortcut icon" href="{{url_for('static',filename='img/favicon.ico')}}">
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
 
@@ -89,10 +91,6 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="{{url_for('static',filename='js/classie.js')}}"></script>
     <script src="{{url_for('static',filename='js/cbpAnimatedHeader.js')}}"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="{{url_for('static',filename='js/jqBootstrapValidation.js')}}"></script>
-    <script src="{{url_for('static',filename='js/contact_me.js')}}"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="{{url_for('static',filename='js/agency.js')}}"></script>
