--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,11 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-12">
               <span class="copyright">Copyright &copy; Meridth.io {{ current_year }}</span>
             </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
+            <!--<div class="col-md-8">
+               <ul class="list-inline social-buttons">
                     <li><a href="https://twitter.com/meridthllc" target="_blank"><i class="fa fa-twitter" /></i></a></li>
                     <li><a href="https://github.com/meridthllc" target="_blank"><i class="fa fa-github"></i></a></li>
                 </ul>
@@ -15,7 +15,7 @@
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms of Use</a></li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </div>
 </footer>
