Change email to jason@meridth.io

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img class="logo"></a> 
+                <a class="navbar-brand page-scroll" href="#page-top"><img class="logo"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="mailto:contact@meridth.io">Contact</a>
+                        <a class="page-scroll" href="mailto:jason@meridth.io">Contact</a>
                     </li>
                 </ul>
             </div>
