--- a/templates/layout.html
+++ b/templates/layout.html
@@ -80,22 +80,7 @@
     {% block body %}{% endblock %}
     {% block error %}{% endblock %}
     {% include 'footer.html' %}
-
-    <!-- jQuery -->
-    <script src="{{url_for('static',filename='js/jquery.js')}}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="{{url_for('static',filename='js/classie.js')}}"></script>
-    <script src="{{url_for('static',filename='js/cbpAnimatedHeader.js')}}"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="{{url_for('static',filename='js/agency.js')}}"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
-
+    {% include 'scripts.html' %}
 </body>
 
 </html>
