--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -5,7 +5,7 @@
 <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 
 <!-- Plugin JavaScript -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="{{url_for('static',filename='js/classie.js')}}"></script>
 <script src="{{url_for('static',filename='js/cbpAnimatedHeader.js')}}"></script>
 
