update about us section

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                                 <h4 class="subheading">What can we do for you?</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">We are a small software development shop that specializes in helping existing projects get back to delivering their product(s) or new projects get off the ground and begin/keep continuous delivery.</p>
+                                <p class="text-muted">We are software development company that specializes in helping businesses with their technology needs.  This includes hardware, software, website or process.  Customer satisfaction is a priority for us.</p>
                             </div>
                         </div>
                     </li>
