--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-heading">We build software</div>
-            <div class="intro-lead-in">We'd like to help you build yours</div>
+            <div class="intro-heading">We help companies with their technology needs</div>
+            <div class="intro-lead-in">We'd like to help you</div>
             <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
         </div>
     </div>
@@ -35,15 +35,41 @@
                     <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Responsive Design</h4>
-                <p class="text-muted">All of our websites will work on mobile devices.</p>
+                <p class="text-muted">We can create or transition your website to work on mobile devices.</p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Web Security</h4>
-                <p class="text-muted">We can help your website get secure and stay secure.</p>
+                <h4 class="service-heading">Security</h4>
+                <p class="text-muted">We can help your internal network, hardware and website get secure and stay secure.</p>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-server fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Networking</h4>
+                <p class="text-muted">We can evaluate your current internal networking situation and advise on optimized or more secure setups.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Training</h4>
+                <p class="text-muted">We provide training on software, networking setup and maintenance, and many other technology based topics.</p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-code fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="service-heading">Code Review</h4>
+                <p class="text-muted">We can review your current code for best practices, maintenance, and security.</p>
             </div>
         </div>
     </div>
@@ -71,7 +97,7 @@
                                 <h4 class="subheading">What can we do for you?</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">We are software development company that specializes in helping businesses with their technology needs.  This includes hardware, software, website or process.  Customer satisfaction is a priority for us.</p>
+                                <p class="text-muted">We are a technology company that specializes in helping businesses with all of their technology needs.  This includes hardware, software, website or process.  Customer satisfaction is a priority for us.</p>
                             </div>
                         </div>
                     </li>
@@ -113,7 +139,7 @@
                                 <h4 class="subheading">Why do we do what we do?</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">We love helping people and businesses build software/websites that will help make their lives easier.  We get to learn their business process and they get a working product.  Win win.</p>
+                                <p class="text-muted">We love easing technology needs for people and businesses making their lives better and their products more successful.</p>
                             </div>
                         </div>
                     </li>
@@ -142,7 +168,7 @@
                 <div class="team-member">
                     <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/jason.png') }}" alt="">
                     <h4>Jason Meridth</h4>
-                    <p class="text-muted">Founder/Developer</p>
+                    <p class="text-muted">Owner/Principal Software Developer</p>
                     <ul class="list-inline social-buttons">
                         <li><a href="https://github.com/jmeridth"><i class="fa fa-github"></i></a>
                         </li>
