--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/custom.css')}}">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='font-awesome/css/font-awesome.min.css')}}">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
