get contact info above the fold to be more prevalent

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -68,7 +68,10 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="mailto:jason@meridth.io">Contact</a>
+                        <a class="page-scroll" href="mailto:jason@meridth.io">jason@meridth.io</a>
+                    </li>
+                    <li>
+                      <a class="page-scroll" href="tel:210-383-9375">(210) 383-9375</a>
                     </li>
                 </ul>
             </div>
