--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                 <div class="team-member">
                     <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/jason.png') }}" alt="">
                     <h4>Jason Meridth</h4>
-                    <p class="text-muted">Owner/Principal Software Developer</p>
+                    <p class="text-muted">Owner/Principal Software Consultant</p>
                     <ul class="list-inline social-buttons">
                         <li><a href="https://github.com/jmeridth"><i class="fa fa-github"></i></a>
                         </li>
