add google site verification

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Meridth LLC, Jason Meridth">
 
     <title>Meridth, LLC</title>
+    <meta name="google-site-verification" content="96f7astghExxqyVq9qASJX_NO_zuhQH-U42tMz8xmFQ" />
 
     <link rel="shortcut icon" href="{{url_for('static',filename='img/favicon.ico')}}">
 
