docker and testimonials

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -69,6 +69,9 @@
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#testimonials">Testimonials</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="mailto:jason@meridth.io">jason@meridth.io</a>
                     </li>
                     <li>
