--- a/templates/index.html
+++ b/templates/index.html
@@ -187,4 +187,29 @@
         </div>
     </div>
 </section>
+<!-- Testimonials -->
+<section id="testimonials">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Testimonials</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="team-member">
+                    <a href="https://lifeloop.live" target="_blank"><img class="img-circle img-responsive" width="15em" src="{{ url_for('static', filename='img/team/lifeloop_live_logo.png') }}" alt=""></a>
+                    <h4>James Quail</h4>
+                    <p class="text-muted"><a href="https://lifeloop.live" target="_blank">LifeLoop.Live</a></p>
+                    <p class="text-muted">Chief Executive Officer/ Co-Founder</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+              <p class="large text-muted">We’ve developed a great partnership with Meridth, LLC and their dedication to our platform and product is evident in all aspects of the site.  We appreciate their attention to detail and creative approach to bringing our platform to life online. It feels as if we have gained an internal team of the company. They provide highly scaled team. The flexibility, agility and scalability are maximum, and it is amazingly how open and trusted they are. They are very proactive and just remarkable in every way.</p>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
