--- a/templates/index.html
+++ b/templates/index.html
@@ -198,7 +198,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="team-member">
-                    <a href="https://lifeloop.live" target="_blank"><img class="img-circle img-responsive" width="15em" src="{{ url_for('static', filename='img/team/lifeloop_live_logo.png') }}" alt=""></a>
+                    <a href="https://lifeloop.live" target="_blank"><img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/lifeloop_live_logo.png') }}" alt=""></a>
                     <h4>James Quail</h4>
                     <p class="text-muted"><a href="https://lifeloop.live" target="_blank">LifeLoop.Live</a></p>
                     <p class="text-muted">Chief Executive Officer/ Co-Founder</p>
