--- a/templates/index.html
+++ b/templates/index.html
@@ -196,13 +196,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12 text-center">
-              <h3 class="section-subheading text-muted"><a href="https://lifeloop.live" target="_blank">LifeLoop.Live</a></h3>
-            </div>
-        </div>
-        <div class="row">
             <div class="col-sm-12">
                 <div class="team-member">
+                    <h3 class="section-heading text-muted"><a href="https://lifeloop.Live" target="_blank">LifeLoop.Live</a></h3>
                     <a href="https://lifeloop.live" target="_blank"><img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/lifeloop_live_logo.png') }}" alt=""></a>
                     <h4>James Quail</h4>
                     <p class="text-muted">Chief Executive Officer/ Co-Founder</p>
