--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <div class="team-member">
                     <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/jason.png') }}" alt="">
                     <h4>Jason Meridth</h4>
@@ -177,6 +177,13 @@
                         <li><a href="https://linkedin.com/in/jmeridth"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="team-member">
+                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/bishop.JPG') }}" alt="">
+                    <h4>Bishop Meridth</h4>
+                    <p class="text-muted">Intern Software Consultant</p>
                 </div>
             </div>
         </div>
