--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="team-member">
-                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/bishop.JPG') }}" alt="">
+                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/bishop.png') }}" alt="">
                     <h4>Bishop Meridth</h4>
                     <p class="text-muted">Intern Software Consultant</p>
                 </div>
