--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/bishop.png') }}" alt="">
+                    <h4>Bishop Meridth</h4>
+                    <p class="text-muted">Intern Software Consultant</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
                 <div class="team-member">
                     <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/jason.png') }}" alt="">
                     <h4>Jason Meridth</h4>
@@ -178,10 +185,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="team-member">
-                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/bishop.png') }}" alt="">
-                    <h4>Bishop Meridth</h4>
+                    <img class="img-circle img-responsive" src="{{ url_for('static', filename='img/team/lucas.png') }}" alt="">
+                    <h4>Lucas Meridth</h4>
                     <p class="text-muted">Intern Software Consultant</p>
                 </div>
             </div>
