--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,16 +1,16 @@
 <!-- jQuery -->
-<script src="{{url_for('static',filename='js/jquery.js')}}"></script>
+<script src="assets/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="{{url_for('static',filename='js/classie.js')}}"></script>
-<script src="{{url_for('static',filename='js/cbpAnimatedHeader.js')}}"></script>
+<script src="assets/js/classie.js"></script>
+<script src="assets/js/cbpAnimatedHeader.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{url_for('static',filename='js/agency.js')}}"></script>
+<script src="assets/js/agency.js"></script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
 
 <!-- Google Analytics -->
